--- a/src/pages/description/description.styles.css
+++ b/src/pages/description/description.styles.css
@@ -2,7 +2,7 @@
   position: relative;
   margin: 25px auto;
   width: 75%;
-  height: 75vh;
+  min-height: 75vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,24 +10,26 @@
   border-radius: 10px;
   box-shadow: 0px 4px 15px 1px rgb(212, 212, 212);
 }
-
 .product__image {
+  height: 90vh;
   width: 50%;
-  height: 100%;
   padding: 1rem;
 }
 
 .product-description {
   display: flex;
   flex-direction: column;
+  gap: 20px;
   justify-content: space-around;
-  width: 45%;
-  height: 65%;
+
+  max-width: 60%;
+  max-height: 90%;
   margin: 0px 2rem;
   padding: 1rem;
-  background-color: #fffafa;
-  border-radius: 20px;
-  box-shadow: 0px 4px 15px 1px rgb(212, 212, 212);
+  /* background-color: #fffafa; */
+  background-color: rgb(250, 250, 250);
+  /* border-radius: 10px; */
+  box-shadow: 0px 4px 5px 1px rgb(212, 212, 212);
 }
 
 .product-description__title {
@@ -67,14 +69,14 @@
   color: black;
 }
 .product-description__price {
-  padding: 0 1rem;
-  text-align: left;
+  padding: 0 2rem;
   font-size: 1.3rem;
   font-weight: 600;
 }
 .product-description__text {
   color: rgb(75, 75, 75);
   line-height: 150%;
+  max-width: 95%;
   text-align: left;
   /* border: 2px solid red; */
 }
