--- a/src/components/button/button.styles.css
+++ b/src/components/button/button.styles.css
@@ -8,6 +8,17 @@
   cursor: pointer;
 }
 
+.btn-signup {
+  margin: 10px 0px;
+  width: 100%;
+  background-color: rgb(111, 14, 180);
+  color: white;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 0.9rem;
+}
+
 .cart-icon {
   margin-bottom: 5px;
   vertical-align: middle;
