--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -2,7 +2,7 @@
   position: sticky;
   z-index: 1;
   top: 0px;
-  width: 100%;
+  /* width: 100%; */
   height: 50px;
   padding: 0 1em;
   display: flex;
@@ -31,8 +31,20 @@
   list-style-type: none;
   text-transform: uppercase;
   font-size: 0.9rem;
+  text-decoration: none;
 }
 
+.navitems li.username {
+  /* width: 15px; */
+  /* height: 15px; */
+  padding: 3px 8px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  text-align: center;
+  border-radius: 50%;
+  color: white;
+  background-color: rgb(176, 131, 211);
+}
 .navicon {
   font-size: 1.1rem;
   margin-bottom: 4px;
