--- a/src/components/container/container.styles.css
+++ b/src/components/container/container.styles.css
@@ -1,8 +1,19 @@
 .container {
+  position: relative;
   display: flex;
-  min-width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
   flex-wrap: wrap;
-  margin-top: 30px;
+  /* margin-top: 20px; */
+  width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  .container {
+    flex-direction: row;
+    max-width: 80vw;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
