--- a/src/components/form-input/form-input.styles.css
+++ b/src/components/form-input/form-input.styles.css
@@ -1,10 +1,10 @@
-input[type='text'],
-input[type='email'],
-input[type='password'] {
+input[type="text"],
+input[type="email"],
+input[type="password"] {
   align-self: center;
-  width: 90%;
+  width: 100%;
   padding: 12px 10px;
-  margin: 8px 0;
+  /* margin: 8px 0; */
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
