--- a/src/components/button/button.styles.css
+++ b/src/components/button/button.styles.css
@@ -53,14 +53,20 @@
 }
 
 .btn-increment {
-  font-size: 1.1rem;
   color: rgb(97, 97, 97);
-  padding: 0.5rem;
-  width: 50px;
+}
+
+@media screen and (min-width: 900px) {
+  .btn-increment {
+    font-size: 1.1rem;
+    padding: 0.3rem;
+    width: 45px;
+  }
 }
 
 .btn-delete {
   padding: 0;
+  font-size: 0.8rem;
   font-weight: 500;
   background-color: transparent;
   color: rgb(245, 82, 82);
@@ -77,8 +83,9 @@
 }
 
 .btn-checkout {
-  margin: 1rem;
-  padding: 0.8rem 3rem;
+  margin: 0.5rem;
+  padding: 0.8rem 1rem;
+  font-size: 0.8rem;
   background-color: rgb(114, 14, 180);
   color: white;
 }
