--- a/src/components/spinners/spinner.styles.css
+++ b/src/components/spinners/spinner.styles.css
@@ -1,22 +1,22 @@
 .spinner {
+  width: 50px;
+  height: 50px;
   position: absolute;
-  top: 35%;
+  top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0 auto;
   border: 6px solid #e6e6e6;
   border-radius: 50%;
   border-top: 6px solid rgb(114, 14, 180);
-  width: 50px;
-  height: 50px;
   -webkit-animation: spin 1s linear infinite; /* Safari */
   animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
