--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -3,10 +3,12 @@
   z-index: 1;
   top: 0px;
   padding: 0.2em 1rem;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: center;
   background-color: #f8fbf8;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
 }
@@ -86,6 +88,7 @@
   .navbar {
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
   }
 
   .navitems {
