--- a/src/pages/products/products.styles.css
+++ b/src/pages/products/products.styles.css
@@ -10,11 +10,14 @@
 
 .product {
   position: relative;
+  width: 225px;
+  height: 250px;
   min-height: 275px;
   background-color: white;
   border-radius: 10px;
   margin: 10px;
   align-self: center;
+  box-shadow: 0px 4px 15px 1px rgb(212, 212, 212);
 }
 
 .product-image {
@@ -46,6 +49,7 @@ img {
 
 .price {
   position: relative;
+  margin-top: 6px;
   top: -8px;
   text-align: center;
   font-size: 1.1rem;
