feat: add signin as guest user

--- a/src/pages/signin/signin.styles.css
+++ b/src/pages/signin/signin.styles.css
@@ -30,6 +30,8 @@ form .signup {
 
 .button__container {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   justify-content: space-between;
   padding: 1rem 0;
 }
