--- a/src/pages/products/products.styles.css
+++ b/src/pages/products/products.styles.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
   margin: 10px;
   align-self: center;
-  box-shadow: 0px 4px 15px 1px rgb(212, 212, 212);
+  box-shadow: 0 4px 15px 1px rgb(212, 212, 212);
 }
 
 .product-image {
