--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-align: center;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 body {
   background-color: #f5f5f5;
